wip: fixed the hamburger icon color

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bkground">
+    <nav class="navbar navbar-expand-lg navbar-light bkground">
         <div class="container">
             <div class="navbar-brand bio-nav-name">Michael Kelley</div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
