--- a/portfolio.html
+++ b/portfolio.html
@@ -12,15 +12,13 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg bkground">
+<nav class="navbar navbar-expand-lg navbar-light bkground">
     <div class="container">
         <div class="navbar-brand bio-nav-name">Michael Kelley</div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
-
         <div class="collapse navbar-collapse justify-content-end bkground" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item" >
