--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
             </div>
         </div>
     </div>
+
+    <!-- when resized for mobile, content is hidden behind sticky footer without some spacing -->
+    <div class="spacer-div"></div>
+    <div class="spacer-div"></div>
+    <div class="spacer-div"></div>
+    
     <footer class="footer">
         <div class="container">
             <span>Copyright @</span>
