updated portfolio page to link to games

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,12 +57,37 @@
 
         <div class="row">
             <div class="col-md-12 main-body">
-                <img class="img-fluid float-left port-item" src="assets/images/project-placeholder.png">
-                <img class="img-fluid float-left port-item" src="assets/images/project-placeholder.png">
-                <img class="img-fluid float-left port-item" src="assets/images/project-placeholder.png">
-                <img class="img-fluid float-left port-item" src="assets/images/project-placeholder.png">
-                <img class="img-fluid float-left port-item" src="assets/images/project-placeholder.png">
-            </div>
+                <section class="main-section">
+                    <div class="work">
+                        <a href="https://mjkelley354.github.io/Word-Guess-Game/" target="_blank">
+                            <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+
+                            <h3>Word Guess</h3>
+                        </a>
+                    </div>
+                    <div class="work">
+                        <a href="https://mjkelley354.github.io/Walking-Dead-Game/" target="_blank">
+                            <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+
+                            <h3>RPG Game</h3>
+                        </a>
+                    </div>
+                    <!-- <div class="work">
+                        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+
+                        <h3>Trivia Game</h3>
+                    </div>
+                    <div class="work">
+                        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+
+                        <h3>Rutgers Info Widget</h3>
+                    </div>
+                    <div class="work">
+                        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+
+                        <h3>Rock Paper Scissors</h3>
+                    </div> -->
+                </section>
         </div>
     </div>
 </div>
