--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div class="row">
                 <div class="col-md-12 main-body">
-                    <img class="rounded float-left me-pic" src="assets/images/mike.jpg">
+                    <img class="rounded float-left me-pic" src="assets/images/me.jpeg">
 
                     <p>The picture here looks very serious but I'm actually a friendly guy.  I'm at coding boot
                         camp because I want to learn coding.  I know some vb, Java and SQL but there's a lot I
