added link for trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,12 +72,14 @@
                             <h3>RPG Game</h3>
                         </a>
                     </div>
-                    <!-- <div class="work">
-                        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-                        <h3>Trivia Game</h3>
-                    </div>
                     <div class="work">
+                        <a href="https://mjkelley354.github.io/Trivia-Advanced/" target="_blank">
+                            <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+
+                            <h3>Trivia Game</h3>
+                        </a>
+                    </div>
+                    <!-- <div class="work">
                         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
 
                         <h3>Rutgers Info Widget</h3>
