--- a/portfolio.html
+++ b/portfolio.html
@@ -79,12 +79,14 @@
                             <h3>Trivia Game</h3>
                         </a>
                     </div>
-                    <!-- <div class="work">
-                        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-                        <h3>Rutgers Info Widget</h3>
-                    </div>
                     <div class="work">
+                        <a href="https://mjkelley354.github.io/Giphy-Browser/" target="_blank">
+                            <img src="assets/images/technics-q-c-640-480-7.jpg" alt="GIPHY Browser">
+
+                            <h3>GIPHY Browser</h3>
+                        </a>
+                    </div>
+                    <!--<div class="work">
                         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
                         <h3>Rock Paper Scissors</h3>
