added new profile page link to Train Scheduler

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,11 +86,13 @@
                             <h3>GIPHY Browser</h3>
                         </a>
                     </div>
-                    <!--<div class="work">
-                        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+                    <div class="work">
+                        <a href="https://mjkelley354.github.io/Train-Scheduler/" target="_blank">
+                            <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Train-Scheduler">
 
-                        <h3>Rock Paper Scissors</h3>
-                    </div> -->
+                            <h3>Train Scheduler</h3>
+                        </a>
+                    </div>
                 </section>
         </div>
     </div>
